# CurveLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.json  license.txt  pyproject.toml
bindings/: CurveLibraryBindings.cpp
curve_library/: __init__.py
include/curves/: ArcCurve.h  BaseCurve.h  BezierCurve.h  ClothoidCurve.h  CurveFactory.h  CurveList.h  HermiteSplineCurve.h
include/utils/: ClothoidData.h  ClothoidSolver.h  Fresnel.h  G2Solve3Arc.h  Integrator.h  Solver.h  Solver2x2.h  Solver3x3.h
src/: ClothoidData.cpp  G2Solve3Arc.cpp  Solver2x2.cpp
src/curves/: ArcCurve.cpp  BaseCurve.cpp  BezierCurve.cpp  ClothoidCurve.cpp  CurveFactory.cpp
src/utils/: Fresnel.cpp
